--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Open indexPC.html",
-            "file": "/home/vinhautoservice/Документы/W/indexPC.html"
+            "name": "Open",
+            "file": "/home/vinhautoservice/Документы/W/index.html"
         }
     ]
 }
